--- a/page4.html
+++ b/page4.html
@@ -248,8 +248,8 @@
             <h3 style="padding-right: 850px;">Then as you grew up there came a time when you wanted to get fitter. It'll always amaze me how you managed to change your body so much in just 1 year. I think I never have a huge reaction coz I saw the new you before you showed me pics of the old you. But if I had known you when you still hadn't changed and then one day saw the transformation, i think I never would've recognised you at all.</h3>
             <h3 style="padding-right: 1300px;">1 year of consistency and hard work, pat pat pat pat. I'm really very proud of you. And I'll always be so relieved and happy over the fact that you exist, and that I got to know you.</h3>
             <h3 style="padding-right: 1300px;">People like you are rare, coz it's rare to have such emotional intelligence at a young age. You may say that it's coz I haven't met many people in my life yet, but I'm pretty sure I have met at least around 500 people in my own 20 years of existence. And out of those 500 people, irrespective of the gender, there aren't many people who have such situational awareness and ability to make quick decisions based on those situations, plus emotional intelligence.</h3>
-            <h3>Basically, you're the best bau</h3>
-            <h3>:]</h3>
+            <h3>Basically, you're the best boi :]</h3>
+<!--             <h3>:]</h3> -->
           </div>
         </div>
 
